--- a/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
+++ b/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
@@ -1,21 +1,20 @@
-.preorders-container
-    // margin-bottom: 50px !important
+.preordersContainer
     margin-top: 1rem
-
     table 
-        border: 1px dashed var(--border) !important
+        border: 1px solid var(--border) !important
         border-radius: var(--br)
+        margin-bottom: 2em
 
-.preorders-container.active
+.preordersContainer.active
     svg
         transform: rotate(90deg)
 
-.preorders-heading
+.preordersHeading
     display: flex
     align-self: center
+    font-size: .9rem
+    font-weight: 600
     color: var(--accent) !important
-    padding: 10px 0  !important
-    margin-bottom: 10px
     span
         margin: 0 5px
         svg
