--- a/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
+++ b/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
@@ -1,7 +1,9 @@
 .preordersContainer
     margin-top: 1rem
     table 
-        border: 1px solid var(--border) !important
+        border: 1px solid var(--border)
+        margin: 0 1em
+        // background: var(--section)
         border-radius: var(--br)
         margin-bottom: 2em
 
