--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -1,7 +1,8 @@
 .tableWrapper 
     display: table
     width: 100%
-    border: 1px solid var(--border)
+    border: 1px solid var(--borderLight)
+    background: var(--section)
     border-radius: var(--br)
     margin-bottom: 2em
 
@@ -21,9 +22,8 @@
                 outline: none !important
 
     .tableFooter
-        // background: var(--accentLight)
-        border-top: 1px dashed  var(--border)
         padding: .7em
+        background: var(--bg)
     table thead
         border-top: 1px solid var(--border)
     table td:first-of-type
