--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -1,5 +1,6 @@
 .OrderLayout
     .Meta
+        position: relative
         border-left: 1px solid var(--border)
         padding: 1rem 1rem 
 
@@ -36,7 +37,15 @@
                     &:hover pre
                         opacity: 1
 
-
+        .actions
+            // background: var(--accentLight)
+            position: absolute 
+            bottom: 0
+            right: 0
+            color: var(--text1)
+            width: 100%
+            font-size: .8rem
+            border-top: 1px solid var(--border)
 
         .OrderComment
             color: var(--text1)
