--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -74,3 +74,6 @@
     tbody td:nth-last-of-type(3)
         line-height: 1
         max-width: 100px
+
+.awaitingDispatch
+    background: var(--borderLight) !important
