--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -39,10 +39,10 @@
 
 .partitionHeading
     color: var(--text2)
-    border-bottom: 1px dashed var(--border)
-    padding: .5em 1em 
+    border-bottom: 1px dashed var(--borderLight)
+    padding: .2em 1em 
     font-weight: 300
-    font-size: .9rem
+    font-size: .8rem
 
 .Composition
     border-bottom: 1px solid var(--border)
@@ -50,8 +50,8 @@
 .OrderLayout
     display: grid
     grid-template-columns: 2.5fr 1fr
-    border-top: 1px solid var(--border)
-    border-radius: 0 !important
+    border: 1px solid var(--borderLight)
+    border-radius: var(--br10)
     outline: none !important    
     .Main
            
@@ -103,9 +103,8 @@
                     text-decoration: none
 
                 .file-name
-                    font-family: 'IBM Plex Mono'
                     line-height: 1
-
+                    font-weight: 300
                     padding: 5px 0
                     width: fit-content
                     &:hover
