--- a/client/piek/src/materialUI.sass
+++ b/client/piek/src/materialUI.sass
@@ -1,40 +1,47 @@
-//Material UI TextInput 
-.MuiOutlinedInput-root
-    border: 1px solid var(--border) !important
-    border-radius: var(--br10)
-
-.MuiInputBase-root
-    &:hover 
-        &::before
-            border-bottom: 1px solid var(--border) !important
-    &::before
-        border-color: var(--border) !important
+// //Material UI TextInput 
+// .MuiInputBase-root
+//     &:hover 
+//         &::before
+//             border-bottom: 1px solid var(--border) !important
+//     &::before
+//         border-color: var(--border) !important
     
-.MuiFormControl-root
-    .MuiFormLabel-root
-        color: var(--text2)
-        font-size: .9rem !important
+// .MuiFormControl-root
+//     .MuiFormLabel-root
+//         color: var(--text2)
+//         font-size: .9rem !important
 
-    input, textarea
-        color: var(--text1)
-
-//Expansion Panel (preOrders)
-.MuiAccordion-root
-    box-shadow: none !important
-    .MuiAccordionDetails-root, .MuiAccordionSummary-root
-        padding: 0 !important
-
-.MuiAccordionSummary-root
-    height: 40px !important
-    min-height: 0 !important
-    margin: 0 !important
-    .Mui-expanded
-        height: 40px !important
-        margin: 0 !important
+//     input, textarea
+//         color: var(--text1)
 
 
-//Dialog 
-.MuiDialogContent-root
-    border-color: var(--border) !important
-.MuiDialogTitle-root h2
-    color: var(--text1) !important
+
+// //Expansion Panel (preOrders)
+// .MuiAccordion-root
+//     box-shadow: none !important
+//     .MuiAccordionDetails-root, .MuiAccordionSummary-root
+//         padding: 0 !important
+
+// .MuiAccordionSummary-root
+//     height: 40px !important
+//     min-height: 0 !important
+//     margin: 0 !important
+//     .Mui-expanded
+//         height: 40px !important
+//         margin: 0 !important
+
+
+// //Dialog 
+// .MuiDialogContent-root
+//     border-color: var(--border) !important
+// .MuiDialogTitle-root h2
+//     color: var(--text1) !important
+
+
+// // .MuiAutocomplete-paper
+// //     background: var(--section) !important
+// //     border-radius: var(--br10) !important
+
+// // .MuiAutocomplete-listbox
+// //     color: var(--text1) !important
+// //     font-size: .9rem !important
