--- a/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
+++ b/client/piek/src/components/OrderListLayout/PreOrders/preorders.module.sass
@@ -1,30 +1,3 @@
-.preordersContainer
-    margin-top: 1rem
-    table 
-        border: 1px solid var(--border)
-        margin: 0 1em
-        // background: var(--section)
-        border-radius: var(--br)
-        margin-bottom: 2em
-
-.preordersContainer.active
-    svg
-        transform: rotate(90deg)
-
-.preordersHeading
-    display: flex
-    align-self: center
-    font-size: .9rem
-    font-weight: 600
-    color: var(--accent) !important
-    span
-        margin: 0 5px
-        svg
-            opacity: .8
-            width: 21px
-            height: 21px
-            margin-bottom: -6px
-            padding-bottom: 0
-            transition-duration: .3s
-            transform: rotate(0deg)
-
+.preOrdersTableWrapper
+    background: var(--section)
+    border: none
