added a function for manual selection of a manager

--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -43,10 +43,13 @@
         font-weight: 300
         border-bottom: 1px solid var(--border)
         text-align: left
+    thead th:last-of-type
+        padding: 0 
 
     tbody td:first-of-type
         text-align: center
         font-size: .7rem
+
 
     tbody td
         padding: 8px 5px
@@ -69,10 +72,6 @@
     tbody tr:last-of-type td
         border-bottom: none
     
-    tbody td:nth-last-of-type(2),
-    tbody td:nth-last-of-type(3)
-        line-height: 1
-        max-width: 100px
 
 .awaitingDispatch
     td:first-of-type
