update design system

--- a/client/piek/src/components/LoginForm/LoginForm.sass
+++ b/client/piek/src/components/LoginForm/LoginForm.sass
@@ -6,16 +6,16 @@
     top: 50%
     transform: translate(-50%, -50%)
     min-width: 300px
-    color: var(--text1)
+    color: var(--highContrast)
    
     .loginInput
         margin: .5rem 0
         
         input 
-            color: var(--text1) !important
+            color: var(--highContrast) !important
 
         label
-            color: var(--text2) !important
+            color: var(--lowContrast) !important
 
 
     .Button
