--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -38,7 +38,7 @@
     .orderItemActions
         margin-top: .5em
         opacity: 0
-        color: var(--text2)
+        color: var(--lowContrast)
         bottom: 0
         left: 0
         font-size: .7rem
@@ -48,7 +48,7 @@
         a
             margin-right: 1em
             &:hover
-                color: var(--text1)
+                color: var(--highContrast)
 
 
 .firstRow
@@ -62,6 +62,6 @@
         font-weight: 600
 
 .fullName
-    color: var(--text2) !important
+    color: var(--lowContrast) !important
     padding-top: 5px
     font-size: .9rem
