--- a/client/piek/src/components/OrderLayout/sass/order-meta.sass
+++ b/client/piek/src/components/OrderLayout/sass/order-meta.sass
@@ -3,11 +3,10 @@
         position: relative
         border-left: 1px solid var(--border)
         padding: 1rem 1rem 
-
         pre
             font-size: 11px
             font-weight: 400
-            color: var(--text1)
+            color: var(--highContrast)
             margin: 0
             opacity: .4
             transition: opacity 300ms ease
@@ -42,14 +41,15 @@
             position: absolute 
             bottom: 0
             right: 0
-            color: var(--text1)
+            color: var(--highContrast)
             width: 100%
             font-size: .8rem
             border-top: 1px solid var(--border)
 
         .OrderComment
-            color: var(--text1)
-            font-weight: 300
+            color: var(--highContrast)
+            font-size: .9rem
+            line-height: 1.5
             padding: 1rem 0
             white-space: pre-wrap
             pre
