--- a/client/piek/src/components/OrderListLayout/Recently/recently.module.sass
+++ b/client/piek/src/components/OrderListLayout/Recently/recently.module.sass
@@ -2,8 +2,8 @@
     margin: 1em 0 .5em
     font-weight: 600
     font-size: .9rem
-    color: var(--text1)
+    color: var(--lowContrast)
 
 .recentlyTable
     border: 1px solid var(--border)
-    border-radius: var(--br)
+    background: var(--L1)
