--- a/client/piek/src/components/Sidebar/index.sass
+++ b/client/piek/src/components/Sidebar/index.sass
@@ -15,7 +15,7 @@
         align-self: center
         padding: 15px 5px 
         width: 100%
-        color: var(--text2)
+        color: var(--lowContrast)
         &:nth-last-of-type(3)
             margin-top: auto 
     .sidebar-active 
