--- a/client/piek/src/materialUI.sass
+++ b/client/piek/src/materialUI.sass
@@ -8,11 +8,11 @@
     
 // .MuiFormControl-root
 //     .MuiFormLabel-root
-//         color: var(--text2)
+//         color: var(--lowContrast)
 //         font-size: .9rem !important
 
 //     input, textarea
-//         color: var(--text1)
+//         color: var(--highContrast)
 
 
 
@@ -35,13 +35,13 @@
 // .MuiDialogContent-root
 //     border-color: var(--border) !important
 // .MuiDialogTitle-root h2
-//     color: var(--text1) !important
+//     color: var(--highContrast) !important
 
 
 // // .MuiAutocomplete-paper
-// //     background: var(--section) !important
+// //     background: var(--L1) !important
 // //     border-radius: var(--br10) !important
 
 // // .MuiAutocomplete-listbox
-// //     color: var(--text1) !important
+// //     color: var(--highContrast) !important
 // //     font-size: .9rem !important
