--- a/client/piek/src/components/Attendance/attendance.module.sass
+++ b/client/piek/src/components/Attendance/attendance.module.sass
@@ -3,15 +3,15 @@ $status-102: #72c900
 
 .tableWrapper
     display: inline-block
-    border: 1px solid var(--borderLight)
+    border: 1px solid var(--border)
     border-radius: var(--br) 
-    background: var(--section)
+    background: var(--L1)
     min-width: 100%
     margin-bottom: 2em
 .attendanceTable
     padding: 1em
     font-size: .8em
-    color: var(--text2)
+    color: var(--lowContrast)
     border-collapse: collapse
     width: 100%
 
@@ -19,13 +19,13 @@ $status-102: #72c900
         position: sticky
         top: -3px
         z-index: 1000
-        background: var(--section)
+        background: var(--L1)
         padding: 13px 0
-        color: var(--text1)
+        color: var(--highContrast)
         font-weight: normal
 
     .interval
-            color: var(--text1) !important
+            color: var(--highContrast) !important
     tbody td
         border: 1px solid var(--border) !important
         padding: 0
@@ -36,14 +36,14 @@ $status-102: #72c900
         .status-101
             color: $status-101 !important
         &:nth-of-type(1)
-            color: var(--text1)
+            color: var(--highContrast)
             padding-left: 6px
             border-left: none !important
         &:nth-last-of-type(1)
             border-right: none !important
             
         &:nth-of-type(2)
-            color: var(--text1)
+            color: var(--highContrast)
             font-weight: 700
             padding: 0 7px 
    
@@ -56,14 +56,14 @@ $status-102: #72c900
         padding: 0 10px !important
         width: 20px
         opacity: .5
-        color: var(--text1)
+        color: var(--highContrast)
     input
         border: none
         flex-grow: 1
         background: transparent
-        color: var(--text1)
+        color: var(--highContrast)
         &:active, &:focus
             outline: none !important
 .tableFooter
     padding: .7em
-    background: var(--bg)
+    background: var(--L0)
