--- a/client/piek/src/components/Attendance/index.sass
+++ b/client/piek/src/components/Attendance/index.sass
@@ -5,13 +5,13 @@ $status-102: #72c900
     display: flex
     justify-content: flex-end
     flex-grow: 1
-    color: var(--text2)
+    color: var(--lowContrast)
 
 .legend
     display: flex
     flex-direction: row
     font-size: .8em
-    color: var(--text2)
+    color: var(--lowContrast)
     line-height: 1.8
     padding-bottom: 10px
     div
@@ -38,7 +38,7 @@ $status-102: #72c900
 .reportConfigurator
     $br1: 7px
     display: flex
-    border: 1px solid var(--borderLight)
+    border: 1px solid var(--border)
     border-radius: var(--br)
     margin-bottom: 1rem 
     font-size: .9em
@@ -49,7 +49,7 @@ $status-102: #72c900
         div
             margin: 5px 7px 
             padding-bottom: 4px
-            color: var(--text2)
+            color: var(--lowContrast)
             width: fit-content
             &:hover
                 color: var(--accent)
@@ -64,11 +64,11 @@ $status-102: #72c900
         font-size: .9em
   
         .wrap
-            border-left: 1px solid var(--borderLight)
+            border-left: 1px solid var(--border)
             border-radius: 0
             padding: 15px 1rem 
             span
-                color: var(--text2)
+                color: var(--lowContrast)
             input 
                 margin: 0 7px
                 box-sizing: border-box
@@ -83,7 +83,7 @@ $status-102: #72c900
 // .attendance-table
 //     padding: 1em
 //     font-size: .8em
-//     color: var(--text2)
+//     color: var(--lowContrast)
 //     border-collapse: collapse
 //     width: 100%
 
@@ -91,9 +91,9 @@ $status-102: #72c900
 //         position: sticky
 //         top: -3px
 //         z-index: 1000
-//         background: var(--bg)
+//         background: var(--L0)
 //         padding: 13px 0
-//         color: var(--text1)
+//         color: var(--highContrast)
 //         font-weight: normal
 
 //     tbody td
@@ -108,11 +108,11 @@ $status-102: #72c900
 //         //     background: $status-102
 
 //         &:nth-of-type(1)
-//             color: var(--text1)
+//             color: var(--highContrast)
 //             padding-left: 6px
             
 //         &:nth-of-type(2)
-//             color: var(--text1)
+//             color: var(--highContrast)
 //             font-weight: 700
 //             padding: 0 7px 
         
@@ -120,4 +120,4 @@ $status-102: #72c900
 //             opacity: 1
 //             transition: opacity .1s ease 
 //         .interval
-//             color: var(--text1)
+//             color: var(--highContrast)
