--- a/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
+++ b/client/piek/src/components/OrderLayout/EditableComponents/EditableInfo.sass
@@ -5,5 +5,5 @@
         margin: 8px 0
         input, textarea
             height: .8em
-            color: var(--text1)
+            color: var(--highContrast)
             font-weight: normal !important
