--- a/client/piek/src/components/OrderListLayout/Search/search.module.sass
+++ b/client/piek/src/components/OrderListLayout/Search/search.module.sass
@@ -5,13 +5,13 @@
     svg
         padding: 0 10px
         width: 20px
-        color: var(--text1)
-        opacity: .4
+        color: var(--highContrast)
+        opacity: .2
     input
         border: none
         flex-grow: 1
         background: transparent
-        color: var(--text1)
+        color: var(--highContrast)
         &:active, &:focus
             outline: none !important
 
@@ -21,7 +21,7 @@
     align-items: center
     margin-right: 1em
     .filterPlaceholder
-        color: var(--text2)
+        color: var(--lowContrast)
         font-size: .8rem
         font-weight: 300
         padding: 0 8px 
@@ -31,7 +31,7 @@
     position: relative
     font-size: .8rem
     padding-left: 1em
-    margin-left: 1em
+    margin-left: 2.1em
     color: var(--accent)
     p
         margin-top: 0
