--- a/client/piek/src/components/OrderListLayout/main.module.sass
+++ b/client/piek/src/components/OrderListLayout/main.module.sass
@@ -2,8 +2,9 @@
     display: table
     width: 100%
     border: 1px solid var(--border)
-    border-radius: var(--br)
+    background: var(--L1)
     margin-bottom: 2em
+    box-sizing: border-box
 
     .tableSearchInput
         display: flex
@@ -16,13 +17,13 @@
             border: none
             flex-grow: 1
             background: transparent
-            color: var(--text1)
+            color: var(--highContrast)
             &:active, &:focus
                 outline: none !important
 
     .tableFooter
         padding: .7em
-        background: var(--bg)
+        background: var(--L0)
     table thead
         border-top: 1px solid var(--border)
     table td:first-of-type
@@ -37,7 +38,7 @@
     width: 100%
     border-spacing: 0
     thead th
-        color: var(--text2)
+        color: var(--lowContrast)
         height: 30px
         font-size: .7rem
         font-weight: 300
@@ -53,7 +54,7 @@
 
     tbody td
         padding: 8px 5px
-        color: var(--text2)
+        color: var(--lowContrast)
         border-bottom: 1px solid var(--border)
         font-size: .86rem
    
@@ -61,7 +62,7 @@
     tbody td:nth-of-type(3)
         font-family: 'IBM Plex Mono'
         text-decoration: none
-        color: var(--text1)
+        color: var(--highContrast)
         font-size: 1rem
     
     td:nth-of-type(4),
