adding to the checklist && build

--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -61,12 +61,10 @@
             grid-template-columns: 1fr 1fr
             border-bottom: 1px solid var(--border)
             .CheckList
-                font-size: 1rem
-
-
+                font-size: .9rem
                 .CheckListUnit
                     position: relative
-                    padding:  .4rem 3rem
+                    padding:  .4em 2em
                     width: fit-content
                     &:hover
                         background: var(--accentLight)
@@ -77,8 +75,8 @@
                         transform: translateY(-50%)
                         left: 10px
                         position: absolute
-                        width: 15px 
-                        height: 15px
+                        width: 8px 
+                        height: 8px
                         border-radius: 100%
                         opacity: .6
                         border: 1px solid var(--accent)
@@ -106,6 +104,7 @@
                     line-height: 1
                     font-weight: 300
                     padding: 5px 0
+                    font-size: .9rem
                     width: fit-content
                     &:hover
                         color: var(--accent)
