--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -15,8 +15,8 @@ html{
     --accent: #3763FE;
     --danger: #e5534b;
     --accentLight: #E7E9FB;
-    --border: #ebebeb;
-    --border: #e9ebf0;
+    --border: #e0e2e7;
+
     --br10: 6px;
     --br: 15px;
 
@@ -26,7 +26,6 @@ html{
 
     
 html.dark {
-
     --L0: #1b1b22;
     --L1: rgba(200, 200, 255, 0.05);
     --L2: rgba(200, 200, 255, .07);
@@ -38,7 +37,7 @@ html.dark {
 
     --accent: #6989fc;
     --accentLight: #43435c;
-    --border: rgba(255,255,255,.05);
+    --border: rgba(255,255,255,.1);
 
     --awaitingDispatch: rgba(0, 51, 0, 1);
     }
