--- a/client/piek/src/components/OrderLayout/sass/index.sass
+++ b/client/piek/src/components/OrderLayout/sass/index.sass
@@ -39,13 +39,6 @@
         span
             color: var(--danger)
 
-.sectionHeading
-    color: var(--lowContrast)
-    border-bottom: 1px dashed var(--border)
-    padding: .2em 1em 
-    font-weight: 300
-    font-size: .8rem
-
 .Composition
     border-bottom: 1px solid var(--border)
         
@@ -60,6 +53,7 @@
             display: grid
             grid-template-columns: 1fr 1fr
             border-bottom: 1px solid var(--border)
+            min-height: 100px
             .CheckList
                 font-size: .9rem
                 .CheckListUnit
