--- a/client/piek/src/components/OrderLayout/CheckList/index.module.sass
+++ b/client/piek/src/components/OrderLayout/CheckList/index.module.sass
@@ -1,7 +1,7 @@
 .unitInput
     background: transparent 
     border: none
-    border-bottom: 1px solid var(--border)
+    border-bottom: 1px dashed var(--border)
     box-sizing: border-box
     color: var(--highContrast)
     outline: none
