--- a/client/piek/src/components/OrderLayout/CheckList/index.module.sass
+++ b/client/piek/src/components/OrderLayout/CheckList/index.module.sass
@@ -1,11 +1,12 @@
 .unitInput
     background: transparent 
     border: none
-    border-bottom: 1px dashed var(--border)
+    // border-bottom: 1px dashed var(--border)
     box-sizing: border-box
     color: var(--highContrast)
     outline: none
-    height: 30px
+    height: 40px
     font-size: .9rem
     padding: 1em
     width: 100%
+
