--- a/client/piek/src/components/OrderLayout/sass/composition.module.sass
+++ b/client/piek/src/components/OrderLayout/sass/composition.module.sass
@@ -24,15 +24,14 @@
         color: var(--accent)
         margin-top: 6px
 
-
-
 .Unit 
     position: relative
     padding: 1em
-    padding-left: 2em
     border-bottom: 1px solid var(--borderLight) !important
     display: grid
     grid-template-columns: .3fr 15fr 1fr 1fr 
+    &:last-of-type
+      border-bottom: none !important
     .index
         font-size: .7rem
         color: var(--lowContrast)
