--- a/client/piek/src/index.sass
+++ b/client/piek/src/index.sass
@@ -1,6 +1,6 @@
 html
     background: var(--L0) !important
-
+    color: var(--highContrast)
     @media (max-width: 1000px)
         font-size: .9rem
     
@@ -19,12 +19,12 @@ input::-webkit-inner-spin-button
 input[type=number] 
   -moz-appearance: textfield
 
-
+.mr15
+    margin-right: 15px
 .base-container
-    max-width: 1416px
+    min-height: 100vh !important
     margin: 0 auto
-    @media (max-width: 1500px)
-        margin-left: 50px
+    margin-left: 50px
 
 .tooltip
     font-size: 12px !important
@@ -62,21 +62,16 @@ input[type=number]
     padding: 10px 0
     align-items: center
     color: var(--highContrast)
-    height: 40px
+    height: 50px
     h2
         color: var(--highContrast)
-        font-size: .9rem
+        font-size: 1rem
 
     span
         color: var(--accent)
         margin-bottom: -5px !important
         padding-right: 1em
             
-
-
-.OrderLayout
-    padding-top: 1em
-
 
 .square-button
     width: 30px
