--- a/client/piek/src/theme.css
+++ b/client/piek/src/theme.css
@@ -3,8 +3,8 @@
 
 html{
     --L0: #f7f7fa;
-    --L1: #fcfcfc;
-    --L2: #dcdcee5d;
+    --L1: #ececf1;
+    --L2: #c7c7d85d;
     
     --highContrast: rgba(0, 0, 0, 0.87);
     --lowContrast: rgba(0, 0, 0, .6);
@@ -22,13 +22,13 @@ html{
     --br10: 6px;
     --br: 15px;
 
-    --awaitingDispatch: rgba(111, 230, 0, .3);
+    --awaitingDispatch: rgb(205, 243, 170);
 }
 
 
     
 html.dark {
-    --L0: #1b1b22;
+    --L0: rgb(30, 30, 37);
     --L1: rgba(200, 200, 255, 0.05);
     --L2: rgba(200, 200, 255, .07);
 
